<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/calendario"
            android:icon="@drawable/ic_event_note_black"
            android:title="@string/calendario" />
        <item
            android:id="@+id/cuidadores"
            android:icon="@drawable/ic_people_black"
            android:title="@string/cuidadores" />
        <item
            android:id="@+id/paciente"
            android:icon="@drawable/ic_person_black"
            android:title="@string/paciente" />
        <item
            android:id="@+id/doctor"
            android:icon="@drawable/ic_person_outline_black"
            android:title="@string/doctor" />
    </group>

    <item android:title="@string/app">
        <menu>
            <item
                android:id="@+id/notificacion"
                android:icon="@drawable/ic_notifications_active_black"
                android:title="@string/notificaciones" />
            <item
                android:id="@+id/ajustes"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
