<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cuidador_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textIsSelectable="true"
    tools:context="com.misael.tesis.frequency.app.frequencyapp.Activities.CuidadorDetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardElevation="@dimen/elevation"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_person_black"
                            android:padding="@dimen/activity_horizontal_margin" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:id="@+id/rutCuidadorList"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/nav_header_vertical_spacing"
                                android:text="@string/Nrut"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rut" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_mail_outline_black"
                            android:padding="@dimen/activity_horizontal_margin" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:id="@+id/correoCuidadorList"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/nav_header_vertical_spacing"
                                android:text="@string/correo"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_person_pin_circle_black"
                            android:padding="@dimen/activity_horizontal_margin" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:id="@+id/direccionCuidadorList"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/nav_header_vertical_spacing"
                                android:text="@string/Ndireccion"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/direccion" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/lytCelular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_call_black"
                            android:padding="@dimen/activity_horizontal_margin" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/telefonoCuidadorList"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/nav_header_vertical_spacing"
                                android:text="@string/Ntelefono"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/telefono" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
