<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.misael.tesis.frequency.app.frequencyapp.Activities.Fragments.DatosDosFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textColor="#FF000000"
                    android:padding="16dp"
                    android:textSize="16dp"
                    android:text="@string/apetito"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Spinner
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:theme="@style/ThemeSpinner"
                        android:id="@+id/nivelApetito"
                        android:layout_width="match_parent"
                        android:layout_height="54dp">
                    </Spinner>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/appbar_padding_top"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:textColor="#FF000000"
                    android:textSize="@dimen/text_size"
                    android:text="@string/comidaN"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/comidaNumero"
                        android:drawableTint="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:focusableInTouchMode="true"
                        android:hint="@string/numero"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="0.7dp"
                android:background="@color/gris"
                />

            <LinearLayout
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/digestion"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:textColor="#FF000000"
                    android:textSize="@dimen/text_size"
                    android:text="@string/Digestion"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        app:counterEnabled="true"
                        app:counterMaxLength="254">
                        <EditText android:id="@+id/sintomas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:hint="@string/Sintomas" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        app:counterEnabled="true"
                        app:counterMaxLength="254">
                        <EditText android:id="@+id/observaComida"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:hint="@string/observaComida" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/guardarComida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/background_light"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/guardacomida"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
